src/main/java/com/example/kdtbe5_miniproject/_core/errors/exception/UserNotFoundException.java
package com.example.kdtbe5_miniproject._core.errors.exception;

public class UserNotFoundException extends RuntimeException{

    public UserNotFoundException(String message) {
        super(message);
    }
}
